# magic-module-scaffolder

./: .gitignore  .release  Pipfile  README.md  pyproject.toml  setup.cfg
src/magic_module_scaffolder/: __main__.py  api_descriptions.py  magic_module.py  scaffolder.py
src/magic_module_skaffolder/: __main__.py  api_descriptions.py  magic_module.py  main.py  skaffolder.py  yaml.py
tests/mmv1/products/compute/: FirewallPolicy.yaml
tests/mmv1/products/networksecurity/: AddressGroup.yaml  ServerTlsPolicy.yaml
