[metadata]
name = magic-module-skaffolder
version = 0.0.2
author = Mark van Holsteijn
url = https://github.com/binxio/magic-module-skaffolder
author_email = mark.vanholsteijn@xebia.com
description = generate and update Magic Module resource definitions
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
  Environment :: Console
  License :: OSI Approved :: Apache Software License
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Operating System :: POSIX
  Operating System :: MacOS
  Operating System :: Unix
  Programming Language :: Python :: 3

[options]
package_dir=
  =src
packages=find:

zip_safe = True
include_package_data = True
install_requires =
  requests
  ruamel-yaml
  click
  pattern
  nltk

use_scm_version = True

[options.packages.find]
where=
  src

[options.entry_points]
console_scripts =
  mm-skaffolder = magic_module_skaffolder.__main__:main
